# hifitime

./: .gitignore  .travis.yml  Cargo.toml  README.md  generate_stubs.py  hifitime.pyi  naif0012.txt  pr_diff.txt  pyproject.toml  test.py
.github/: FUNDING.yml
.github/workflows/: benchmarks.yml  formal_verification.yml  kani-builder.yml  python-new.yml  python.yml  tests.yml  weekly-kani-checker.yaml
benches/: bench_duration.rs  bench_epoch.rs  crit_duration.rs  crit_epoch.rs  iai_duration.rs  iai_epoch.rs  parse_crit_benchmark.py  parse_iai_benchmark.py
data/: eop-2021-10-12--2023-01-04.short  example_eop2.short
doc/: search-index.js
doc/hifitime/: Errors.t.html  enum.Errors.html  index.html  sidebar-items.js  trait.TimeSystem.html
doc/hifitime/datetime/: Offset.t.html  index.html  sidebar-items.js  struct.Datetime.html  struct.FixedOffset.html  type.Offset.html
doc/hifitime/durations/: fn.from_days.html  fn.from_hours.html  fn.from_mins.html  from_days.v.html  from_hours.v.html  from_mins.v.html  index.html  sidebar-items.js
doc/hifitime/instant/: Era.t.html  enum.Era.html  index.html  sidebar-items.js  struct.Duration.html  struct.Instant.html
doc/hifitime/julian/: DAYS_PER_YEAR.v.html  ModifiedJulian.t.html  SECONDS_PER_DAY.v.html  constant.DAYS_PER_YEAR.html  constant.SECONDS_PER_DAY.html  index.html  sidebar-items.js  struct.ModifiedJulian.html
doc/hifitime/traits/: TimeSystem.t.html  index.html  sidebar-items.js  trait.TimeSystem.html  trait.TimeZone.html
doc/hifitime/utc/: USUAL_DAYS_PER_MONTH.v.html  USUAL_DAYS_PER_YEAR.v.html  constant.USUAL_DAYS_PER_MONTH.html  constant.USUAL_DAYS_PER_YEAR.html  index.html  sidebar-items.js  struct.FixedOffset.html  struct.Utc.html  trait.TimeZone.html  type.Offset.html
doc/hifitime/utils/: enum.Errors.html  fn.quorem.html  index.html  quorem.v.html  sidebar-items.js  type.Offset.html
doc/implementors/core/clone/: trait.Clone.js
doc/implementors/core/cmp/: trait.PartialEq.js  trait.PartialOrd.js
doc/implementors/core/fmt/: trait.Debug.js  trait.Display.js
doc/implementors/core/marker/: trait.Copy.js
doc/implementors/core/ops/arith/: trait.Add.js  trait.Neg.js  trait.Sub.js
doc/implementors/hifitime/traits/: trait.TimeSystem.js
doc/src/hifitime/: datetime.rs.html  instant.rs.html  julian.rs.html  lib.rs.html  traits.rs.html  utc.rs.html  utils.rs.html
examples/python/: basic.py  timescales.py
src/: asn1der.rs  datetime.rs  deprecated.rs  duration.rs  epoch.rs  errors.rs  instant.rs  julian.rs  kani_verif.rs  leap_seconds.rs  leap_seconds_file.rs  lib.rs  month.rs  parser.rs  polynomial.rs  polynomials.rs  python.rs  sim.rs  system_time.rs  timeoffset.rs  timescale.rs  timeseries.rs  timeunits.rs  traits.rs  unix.rs  ut1.rs  utc.rs  utils.rs  weekday.rs
src/duration/: kani.rs  kani_verif.rs  mod.rs  ops.rs  parse.rs  parts.rs  python.rs  std.rs
src/efmt/: consts.rs  format.rs  formatter.rs  kani_verif.rs  mod.rs
src/epoch/: formatting.rs  gregorian.rs  initializers.rs  kani_verif.rs  leap_seconds.rs  leap_seconds_file.rs  mod.rs  ops.rs  python.rs  system_time.rs  ut1.rs  with_funcs.rs
src/fmt/: consts.rs  epoch_format.rs  mod.rs
src/formatter/: epoch_format.rs  epoch_formatter.rs  mod.rs
src/python/: epoch.rs  mod.rs
src/timescale/: fmt.rs  kani.rs  mod.rs  tcl.rs
stm32-bench/: Cargo.toml  embed.toml  memory.x
stm32-bench/.cargo/: config
stm32-bench/src/: main.rs
tests/: datetime.rs  duration.rs  efmt.rs  epoch.rs  instant.rs  julian.rs  lib.rs  polynomial.rs  sim.rs  timescale.rs  timeseries.rs  tz.rs  ut1.rs  utc.rs  weekday.rs
tests/python/: test_constants.py  test_duration.py  test_epoch.py
