[package]
name = "hifitime"
version = "4.0.0-alpha"
authors = ["Christopher Rabotin <christopher.rabotin@gmail.com>"]
description = "Ultra-precise date and time handling in Rust for scientific applications with leap second support"
homepage = "https://nyxspace.com/"
documentation = "https://docs.rs/hifitime/"
repository = "https://github.com/nyx-space/hifitime"
keywords = ["date", "time", "science", "leap-second", "no-std"]
categories = ["date-and-time", "no-std"]
readme = "README.md"
license = "Apache-2.0"
exclude = ["*.tar.gz", "data/"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "hifitime"

[dependencies]
serde = { version = "1.0.155", optional = true }
serde_derive = { version = "1.0.155", optional = true }
pyo3 = { version = "0.21.1", features = [
    "extension-module",
    "multiple-pymethods",
], optional = true }
num-traits = { version = "0.2.15", default-features = false, features = [
    "libm",
] }
lexical-core = { version = "0.8.5", default-features = false, features = [
    "parse-integers",
    "parse-floats",
] }
reqwest = { version = "0.12", features = ["blocking", "json"], optional = true }
tabled = { version = "0.15.0", optional = true }
openssl = { version = "0.10", features = ["vendored"], optional = true }
web-time = { version = "1.0.0", optional = true }
snafu = { version = "0.8.2", default-features = false }

[features]
default = ["std"]
std = ["serde", "serde_derive", "web-time", "snafu/std", "snafu/backtrace"]
python = ["std", "pyo3", "ut1"]
ut1 = ["std", "reqwest", "tabled", "openssl"]

[dev-dependencies]
serde_json = "1.0.91"
criterion = "0.5.1"
iai = "0.1"

[target.wasm32-unknown-unknown.dependencies]
js-sys = { version = "0.3" }
wasm-bindgen_rs = { package = "wasm-bindgen", version = "0.2" }
web-sys = { version = "0.3", features = [
    'Window',
    'Performance',
    'PerformanceTiming',
] }

[target.wasm32-unknown-emscripten.dependencies]
js-sys = { version = "0.3" }
wasm-bindgen_rs = { package = "wasm-bindgen", version = "0.2" }
web-sys = { version = "0.3", features = [
    'Window',
    'Performance',
    'PerformanceTiming',
] }

[target.asmjs-unknown-emscripten.dependencies]
js-sys = { version = "0.3" }
wasm-bindgen_rs = { package = "wasm-bindgen", version = "0.2" }
web-sys = { version = "0.3", features = [
    'Window',
    'Performance',
    'PerformanceTiming',
] }

[[bench]]
name = "crit_epoch"
harness = false

[[bench]]
name = "crit_duration"
harness = false

[[bench]]
name = "iai_duration"
harness = false

[[bench]]
name = "iai_epoch"
harness = false
