[package]
name = "hifitime"
version = "4.2.0"
authors = ["Christopher Rabotin <christopher.rabotin@gmail.com>"]
description = "Ultra-precise date and time handling in Rust for scientific applications with leap second support"
homepage = "https://nyxspace.com/"
documentation = "https://docs.rs/hifitime/"
repository = "https://github.com/nyx-space/hifitime"
keywords = ["date", "time", "science", "leap-second", "no-std"]
categories = ["date-and-time", "no-std"]
readme = "README.md"
license = "MPL-2.0"
exclude = ["*.tar.gz", "data/"]
edition = "2021"

[lib]
crate-type = ["rlib"]
name = "hifitime"

# `cdylib` is useful only when the `std` feature is on.  
# In `no_std`, dynamic‑link targets face “unwinding panics not supported”  https://github.com/nyx-space/hifitime/issues/343
[target.'cfg(feature = "std")'.lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docrs", "--generate-link-to-definition"]

[dependencies]
serde = { version = "1.0.155", optional = true }
serde_derive = { version = "1.0.155", optional = true }
pyo3 = { version = "0.25.0", features = [
    "multiple-pymethods",
], optional = true }
num-traits = { version = "0.2.15", default-features = false, features = [
    "libm",
] }
lexical-core = { version = "1.0.1", default-features = false, features = [
    "parse-integers",
    "parse-floats",
] }
tabled = { version = "0.20.0", optional = true }
openssl = { version = "0.10", features = ["vendored"], optional = true }
web-time = { version = "1.0.0", optional = true }
snafu = { version = "0.8.2", default-features = false }
ureq = { version = "3.0.10", default-features = false, optional = true, features = [
    "rustls",
] }

[features]
default = ["std"]
std = ["serde", "serde_derive", "web-time", "snafu/std", "snafu/backtrace"]
python = ["std", "pyo3/extension-module", "ut1", "lts"]
ut1 = ["std", "ureq", "tabled", "openssl"]
lts = ["std", "ureq", "openssl", "ut1"]

[dev-dependencies]
serde_json = "1.0.91"
criterion = "0.7.0"
iai = "0.1"

[target.wasm32-unknown-unknown.dependencies]
js-sys = { version = "0.3" }
wasm-bindgen_rs = { package = "wasm-bindgen", version = "0.2" }
web-sys = { version = "0.3", features = [
    'Window',
    'Performance',
    'PerformanceTiming',
] }

[target.wasm32-unknown-emscripten.dependencies]
js-sys = { version = "0.3" }
wasm-bindgen_rs = { package = "wasm-bindgen", version = "0.2" }
web-sys = { version = "0.3", features = [
    'Window',
    'Performance',
    'PerformanceTiming',
] }

[target.asmjs-unknown-emscripten.dependencies]
js-sys = { version = "0.3" }
wasm-bindgen_rs = { package = "wasm-bindgen", version = "0.2" }
web-sys = { version = "0.3", features = [
    'Window',
    'Performance',
    'PerformanceTiming',
] }

[target.aarch64-unknown-linux-gnu.env]
CFLAGS = "-D__ARM_ARCH=8"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[[bench]]
name = "crit_epoch"
harness = false

[[bench]]
name = "crit_duration"
harness = false

[[bench]]
name = "iai_duration"
harness = false

[[bench]]
name = "iai_epoch"
harness = false
