[build-system]
requires = ["maturin>=1.5,<1.6"]
build-backend = "maturin"

[project]
name = "hifitime"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
    "Intended Audience :: Science/Research",
]

[tool.yapf]
based_on_style = "google"
spaces_before_comment = 4
column_limit = 100
