[package]
name = "stm32f7-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m-rt = "0.6.8"
cortex-m = "0.7.4"
stm32f7xx-hal = {version = "0.6.0", features = ["stm32f746"]}
rtt-target = {version = "0.3.1", features = ["cortex-m"]}
hifitime = {path = "..", default-features=false}
rand_core = "0.6.3"


[profile.dev]
debug=true
strip=false
debug-assertions=false
opt-level="s"
lto=true
overflow-checks=false
codegen-units=1
rpath=false
panic="abort"

[profile.release]
debug=false
strip=false
debug-assertions=false
opt-level="s"
lto=true
overflow-checks=false
codegen-units=1
rpath=false
panic="abort"
